<resources>
    <string name="app_name">SimpleTodo</string>
    <string name="hint_newTodo">New Todo</string>
    <string name="btn_label_addItem">Add Item</string>
    <string name="title_activity_edit_todo">EditTodoActivity</string>
    <string name="title_tv_edit_todo">Edit Todo Below</string>
    <string name="checkbox_done_title">Done</string>
    <string name="btn_ok">OK</string>
    <string name="btn_save">SAVE</string>
    <string name="todo_navbar_title">Todo List</string>
    <string name="menu_filter">Filter</string>
    <string name="filter_all">All</string>
    <string name="filter_done">Done</string>
    <string name="filter_pending">Pending</string>
    <string name="filter_fragment_title">Choose Filters for Todo List</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">High</string>
</resources>
